
Changelog
=========

2019.1.0 (unreleased)
---------------------

- Kill the theme functional test layer. [Rotonen]
- Kill the theme integration test layer. [Rotonen]
- Merge the plonetheme.teamraum gever profile into opengever.core. [Rotonen]
- Merge the plonetheme.teamraum default profile into opengever.core. [Rotonen]
- Merge the plonetheme.teamraum bumblebee profile to opengever.core. [Rotonen]
- Set the default publisher encoding to UTF-8 to match production in tests. [Rotonen]
- Bump ftw.testbrowser to 1.30.0 to respect content encodings in tests. [Rotonen]
- Bump ftw.pdfgenerator to version 1.6.3. [njohner]
- Fix an improper super call in meeting activities. [Rotonen]
- Move meeting activity actor_link fetching to meeting activity helpers. [Rotonen]
- Fix flaky loading of document preview with tooltip. [Kevin Bieri]
- Remove unused get_conversion_status view. [njohner]
- Correctly update containing_dossier and containing_subdossier indexes. [njohner]
- Also show participants with expired membership in meeting participants-tab. [njohner]
- Change remaining "zurücksenden" to "ablegen". [njohner]
- Translate z3c.formwidget.query (nothing). [njohner]
- Add buttons for managers to get the toc json for meeting periods. [njohner]
- Add absent members to the meeting protocolData. [njohner]
- Add description field to paragraph add form. [njohner]
- Fix bug in disposition ech0160 folder model. [njohner]
- Port disposition tests to integration layer. [njohner]
- Add support for simple language codes in request language negotiation [lgraf]
- Fix typo in favorite error message. [njohner]
- Only display .docx files as possible proposal documents. [Rotonen]
- Render mail descriptions as intelligent text on the Bumblebee overlay. [Rotonen]
- Render mail descriptions as intelligent text on the mail overview. [Rotonen]
- Render document descriptions as intelligent text on the Bumblebee overlay. [Rotonen]